syntax = "proto3";

package runm;

message DeleteResponse {
    uint64 num_deleted = 2;
}
